--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ documentation = "https://docs.rs/susync/"
 description = "An util crate to complete futures through a handle. Its main purpose is to bridge async Rust and callback-based APIs."
 repository = "https://github.com/tcerqueira/susync"
 readme = "README.md"
-
+keywords = ["async", "callback", "bridge", "future", "handle"]
+categories = ["asynchronous"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
