--- a/susync-macros/Cargo.toml
+++ b/susync-macros/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+proc-macro2 = "1.0.78"
 quote = "1.0.35"
 syn = {version = "2.0.48", features = ["full"]}
 
